--- a/templates/admin.html
+++ b/templates/admin.html
@@ -84,6 +84,23 @@
 			value="{{page.glob.glob_dl_password}}" placeholder="{{page.glob.langa.glob_dl_pw2}}" />
 	</fieldset>
 	<fieldset data-role="fieldcontain">
+		<label for="tag_protect_choice">{{page.glob.langa.tag_protect}}</label>
+		<select name="tag_protect_choice" id="tag_protect_choice" data-role="slider">
+			<option value="0" {% if page.glob.tag_protect_choice == "0" %}selected {%endif%}>
+				{{page.glob.langa.switch_no}}
+			</option>
+			<option value="1" {% if page.glob.tag_protect_choice == "1" %}selected {%endif%}>
+				{{page.glob.langa.switch_yes}}
+			</option>
+		</select>
+		<p>{{page.glob.langa.tag_protect_expl}}</p>
+	</fieldset>
+	<fieldset data-role="fieldcontain">
+		<label for="tag_protect_field">{{page.glob.langa.tag_protect_field}}</label>
+		<input name="tag_protect_field" id="tag_protect_field" type="text" 
+			value="{{page.glob.tag_protect_field}}" placeholder="{{page.glob.langa.tag_protect_field_exp1}}" />
+	</fieldset>
+	<fieldset data-role="fieldcontain">
 		<label for="thumb_gen_clipped">{{page.glob.langa.thumb_gen_clipped}}</label>
 		<select name="thumb_gen_clipped" id="thumb_gen_clipped" data-role="slider">
 			<option value="0" {% if page.glob.thumb_gen_clipped == "0" %}selected {%endif%}>
