Change password dialog box - language issue

--- a/templates/password_dialog.html
+++ b/templates/password_dialog.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<div id="passwordform">
 		<fieldset>
-			<label for="password">Passwort</label>
+			<label for="password">{{page.glob.langa.password_dialog_titel}}</label>
 			<input type="password" id="password" name="password" value="" autofocus />		
 			<p id="pw_dlg_status">{{page.glob.langa.invalid_password}}</p>
 			<a data-role="button" data-rel="back" data-icon="delete" data-inline="true">
