Added configuration for Send-To-Kindle feature

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -17,7 +17,9 @@
 	{% elseif error == 3 %}
 		<p class="error">{{page.glob.langa.admin_pw_required2}}</p>
 	{% elseif error == 4 %}
-		<p class="error">{{page.glob.langa.admin_invalid_page_size}}</p>		
+		<p class="error">{{page.glob.langa.admin_invalid_page_size}}</p>	
+	{% elseif error == 5 %}
+		<p class="error">{{page.glob.langa.invalid_email_address}}</p>		
 	{% else %}
 		<p class="error">{{page.glob.langa.unknown_error1}}</p>
 	{% endif %}
@@ -82,6 +84,24 @@
 		<label for="glob_dl_password">{{page.glob.langa.glob_dl_pw1}}</label>
 		<input name="glob_dl_password" id="glob_dl_password" type="text" 
 			value="{{page.glob.glob_dl_password}}" placeholder="{{page.glob.langa.glob_dl_pw2}}" />
+	</fieldset>
+<fieldset data-role="fieldcontain">
+		<label for="kindle">{{page.glob.langa.kindle_enable}}</label>
+		<select name="kindle" id="kindle" data-role="slider">
+			<option value="0" {% if page.glob.kindle == "0" %}selected {%endif%}>
+				{{page.glob.langa.switch_no}}
+			</option>
+			<option value="1" {% if page.glob.kindle == "1" %}selected {%endif%}>
+				{{page.glob.langa.switch_yes}}
+			</option>
+		</select>
+		<p>{{page.glob.langa.kindle_expl}}</p>
+	</fieldset>	
+	<fieldset data-role="fieldcontain">
+		<label for="kindle_from_email">{{page.glob.langa.kindle_from_email1}}</label>
+		<input name="kindle_from_email" id="kindle_from_email" type="text" 
+			value="{{page.glob.kindle_from_email}}" placeholder="{{page.glob.langa.kindle_from_email2}}" />
+		<p>{{page.glob.langa.kindle_expl2}}</p>
 	</fieldset>
 	<fieldset data-role="fieldcontain">
 		<label for="thumb_gen_clipped">{{page.glob.langa.thumb_gen_clipped}}</label>
