Fixed/Enhanced OPDS feed
- fixed malformed navigaton links in OPDS feed (links were pointing to
/bbs/tagslist/'ID'/ instead of /bbs/opds/tagslist/'ID')
- added language, comment, tags, cover image to OPDS partial
acquisition entry
- added book language to title_detail page
- added mime type for new Kindle azw3 format

--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -99,6 +99,14 @@
 				{% endfor %}
 			</p>
 		</div>
+		<div id="language">
+				<h2>{{page.glob.langa.language}}</h2>			
+				<div>
+				
+					{{ language }}
+				
+				</div>
+		</div>
 		<div id="comment">
 				<h2>{{page.glob.langa.comment}}</h2>			
 				<div>
