--- a/templates/password_dialog.html
+++ b/templates/password_dialog.html
@@ -9,7 +9,7 @@
 			<a data-role="button" data-rel="back" data-icon="delete" data-inline="true">
 				{{page.glob.langa.back}}
 			</a>
-			<a class="checkdl" data-role="button" data-ajax="true" data-bookid="{{bookid}}" 	data-proot="{{page.rot}}"  data-icon="check" data-inline="true">
+			<a class="checkdl" data-role="button" data-ajax="true" data-bookid="{{bookid}}" 	data-proot="{{page.rot}}"  data-icon="check" data-inline="true" id="submit_pw">
 				{{page.glob.langa.check_access}}
 			</a>
 		</fieldset>
