--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -55,8 +55,8 @@
 	  </li>       	  
 	</ul>
 </div>
-{% if page.menu > 1 %}
-<form action="{{page.rot}}/{{url}}/0/" 
+{% if page.menu >= 1 %}
+<form action="{{page.rot}}/search/" 
 			method="get" class="ui-bar-b">
 	<div data-role="fieldcontain" class="ui-hide-label">
 		<label for="search">{{page.glob.langa.pagination_search_lbl}}</label>
