--- a/templates/main.html
+++ b/templates/main.html
@@ -9,10 +9,10 @@
 	<title>{{ page.title }}</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
   {% block headerlinks %}{% endblock %}
-  <link rel="stylesheet" href="{{page.rot}}/style/jquery/jquery.mobile-1.2.0.min.css">
+  <link rel="stylesheet" href="{{page.rot}}/style/jquery/jquery.mobile-1.3.1.min.css">
   <link rel="stylesheet" href="{{page.rot}}/style/style.css">
   <link rel="icon" href="{{page.rot}}/favicon.ico" type="image/x-icon">
-	<script src="{{page.rot}}/js/libs/modernizr-2.5-respond-1.1.0.min.js"></script>
+	<script src="{{page.rot}}/js/libs/modernizr-2.6.2-custom.min.js"></script>
 </head>
 <body>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -31,8 +31,8 @@
     </div>      
   </div> <!-- page -->
 
-  <script src="{{page.rot}}/js/libs/jquery-1.8.3.min.js"></script>
-  <script src="{{page.rot}}/js/libs/jquery.mobile-1.2.0.min.js"></script>
+  <script src="{{page.rot}}/js/libs/jquery-1.9.1.min.js"></script>
+  <script src="{{page.rot}}/js/libs/jquery.mobile-1.3.1.min.js"></script>
   <script src="{{page.rot}}/js/libs/jquery.cookie.js"></script>
   <script src="{{page.rot}}/js/script.js"></script>
 </body>
