--- a/style/style.css
+++ b/style/style.css
@@ -1,70 +1,14 @@
-body {
-  padding-top: 60px;
-  padding-bottom: 40px;
-}
-#passwordform #pw_dlg_status {
-  text-align: center;
-  background-color: orange;
-  font-size: large;
-  display: none;
-}
-.title_detail header h1 {
-  margin-top: 2px;
-  margin-bottom: 2px;
-}
-.title_detail header p {
-  margin-top: 2px;
-  margin-bottom: 2px;
-}
-.title_detail .title_detail_image {
-  width: 40%;
-  float: left;
-}
-.title_detail .title_detail_image img {
-  max-width: 100%;
-}
-.title_detail .title_details {
-  width: 55%;
-  float: right;
-  padding-left: 1%;
-}
-div.footer p {
-  text-align: center;
-}
-/* Explanations, hints in admin page */
-fieldset p {
-  font-size: 80%;
-}
-/* Flash messages */
-div#flash {
-  color: white;
-}
-div#flash p {
-  padding: 5px;
-}
-div#flash .success {
-  background-color: green;
-}
-div#flash .error {
-  background-color: red;
-}
-@media (max-width: 480px) {
-  .title_detail_image {
-    float: none;
-    width: 100%;
-  }
-  .title_details {
-    width: 100%;
-    float: none;
-    padding-left: 1%;
-  }
-}
-@media (max-width: 768px) {
-  
-}
-@media (min-width: 768px) and (max-width: 980px) {
-  
-}
-@media (min-width: 1200px) {
-  
-}
+body{padding-top:60px;padding-bottom:40px;}
+#passwordform #pw_dlg_status{text-align:center;background-color:orange;font-size:large;display:none;}
+.title_detail header h1{margin-top:2px;margin-bottom:2px;}
+.title_detail header p{margin-top:2px;margin-bottom:2px;}
+.title_detail .title_detail_image{width:40%;float:left;}.title_detail .title_detail_image img{max-width:90%;}
+.title_detail .title_details{width:55%;float:right;padding-left:1%;}
+table#custom_columns_table tbody th{border-bottom:1px dotted gray;border-right:1px dotted gray;text-align:right;vertical-align:top;padding:10px;}
+table#custom_columns_table td{border-bottom:1px dotted gray;padding:10px;}
+div.footer p{text-align:center;}
+fieldset p{font-size:80%;}
+div#flash{color:white;}div#flash p{padding:5px;}
+div#flash .success{background-color:green;}
+div#flash .error{background-color:red;}
+@media (max-width:768px){.title_detail .title_detail_image{float:none;margin-left:auto;margin-right:auto;}.title_detail .title_detail_image img{display:block;} .title_detail .title_details{margin-left:auto;margin-right:auto;width:100%;float:none;}}@media (min-width:768px) and (max-width:980px){}@media (min-width:1200px){}
