Changing documentation for release

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -21,4 +21,4 @@
 		</h1>
 {% endif %}
 
-<p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a>  &copy; 2012 Rainer Volz</p>
+<p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a>  &copy; 2012-{{"now"|date('Y')}} Rainer Volz</p>
