--- a/templates/installcheck.html
+++ b/templates/installcheck.html
@@ -120,9 +120,9 @@
               data-rel="popup">
               info
             </a>
-            PHP version 5.2+?
+            PHP version 5.3+?
           </h3>
-          {% if is_a == true %}
+          {% if php == true %}
             <img src="img/bbs-light-green.png" align="center"/>
             <p>
               Yes, found version {{phpv}}.
@@ -408,8 +408,8 @@
     </div>    
   </div> <!-- page -->
 
-  <script src="js/libs/jquery-1.8.3.min.js"></script>
-  <script src="js/libs/jquery.mobile-1.2.0.min.js"></script>
+  <script src="js/libs/jquery-1.9.1.min.js"></script>
+  <script src="js/libs/jquery.mobile-1.3.2.min.js"></script>
   <script src="js/libs/jquery.cookie.js"></script>
   <script src="js/script.js"></script>
 </body>
