--- a/style/style.less
+++ b/style/style.less
@@ -57,7 +57,10 @@ table#custom_columns_table {
 
 
 div.footer {
-  p { text-align: center; }
+  p { 
+    text-align: center; 
+    font-size: 80%;
+  }
 }
 
 /* Explanations, hints in admin page */
