--- a/templates/title_entry.html
+++ b/templates/title_entry.html
@@ -2,11 +2,6 @@
 	<a href="{{page.rot}}/titles/{{book.id}}">
 		<img src="{{page.rot}}/titles/{{ book.id }}/thumbnail" />
 		<h3>{{ book.sort }} ({{ book.pubdate|date("Y") }})</h3>
-		<p>{{book.author_sort}}</p>
-		<p>
-          ({% for format in book.formats %}
-          {{format.format }}
-          {% endfor %})
-        </p>
+		<p>{{book.author_sort}} {{book.addInfo}}</p>
 	</a>
 </li>
