--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -76,7 +76,7 @@
 				{% endfor %} 
 		</div>
 		{% if series != NULL %}
-		<div id="series" data-role="collapsible" data-collapsed="false">
+		<div id="series" data-role="collapsible">
 				<h2>{{page.glob.langa.series}}</h2>
 				{% for this_series in series %}
 				<a data-role="button" data-icon="info" href="{{page.rot}}/series/{{this_series.id}}/0/">{{ this_series.name }}</a>
@@ -91,7 +91,19 @@
 				{% endfor %}
 			</p>
 		</div>
-		{% if ccs %}
+		{% if ids != NULL%}
+		<div id="idlinks" data-role="collapsible" data-collapsed="false">
+			<h2>{{page.glob.langa.idlinks}}</h2>			
+			<p>
+				{% for id in ids %}
+					{% if id_templates[id.type] != NULL %}
+						<a data-role="button" data-icon="info" rel="external" href="{{ id_templates[id.type][0]|replace({'%id%': id.val})}}">{{ id_templates[id.type][1] }}</a>
+					{% endif %}
+				{% endfor %}
+			</p>
+		</div>
+		{% endif %}
+		{% if ccs != NULL %}
 		<div id="custom_columns" data-role="collapsible">
 			<h4>{{page.glob.langa.custom_columns}}</h4>			
 			<table id="custom_columns_table">
