--- a/templates/admin_idtemplates.html
+++ b/templates/admin_idtemplates.html
@@ -13,8 +13,12 @@
 {% for template in templates %}
 	<li>
 		<a class="template"  data-template="{{template.name}}">
-			<h2 class="template-name">{{template.name}}</h2>
-			<p><span class="template-label">{{template.label}}</span>: <span class="template-uri">{{template.val|raw}}</span></p>
+			<h2 class="template-name">
+				{{template.name}} 
+				<span> </span>
+				<span class="template-label">{{template.label}}</span>
+			</h2>
+			<p class="template-uri">{{template.val|raw}}</p>
 		</a>
 		<a class="idtemplate_clear" href="#" data-template="{{template.name}}" data-proot="{{page.rot}}">
 			{{page.glob.langa.admin_idtemplate_clear}}
@@ -22,16 +26,24 @@
 	</li>
 {% endfor %}
 </ul>
-<div id="edit" data-role="popup" data-theme="e">
+<div id="edit" data-role="popup" data-theme="a" class="ui-corner-all ui-content">
 	<form id="templateform" data-proot="{{page.rot}}">
 		<h3>{{page.glob.langa.admin_idtemplate}}</h3>
-		<label for="name" class="ui-hidden-accessible">{{page.glob.langa.admin_idtemplate_name}}</label>
-		<input name="name" id="name" value="" data-theme="e" type="text" disabled="true" />
-		<label for="label" class="ui-hidden-accessible">{{page.glob.langa.admin_idtemplate_label}}</label>
-		<input name="label" id="label" value="" placeholder="{{page.glob.langa.admin_idtemplate_label}}" data-theme="e" type="text"/>
-		<label for="template" class="ui-hidden-accessible">{{page.glob.langa.admin_idtemplate_template}}</label>
-		<input name="template" id="template" value="" placeholder="{{page.glob.langa.admin_idtemplate_template}}" data-theme="e" type="url"/>
-		<button type="submit" data-theme="e" data-icon="check">{{page.glob.langa.save}}</button>
+		<label for="name" class="ui-hidden-accessible">
+			{{page.glob.langa.admin_idtemplate_name}}
+		</label>
+		<input name="name" id="name" value="" type="text" disabled="true" />
+		<label for="label" class="ui-hidden-accessible">
+			{{page.glob.langa.admin_idtemplate_label}}
+		</label>
+		<input name="label" id="label" value="" placeholder="{{page.glob.langa.admin_idtemplate_label}}" type="text"/>
+		<label for="template" class="ui-hidden-accessible">
+			{{page.glob.langa.admin_idtemplate_template}}
+		</label>
+		<input name="template" id="template" value="" placeholder="{{page.glob.langa.admin_idtemplate_template}}" type="url"/>
+		<button type="submit" data-ajax="true" data-icon="check" data-mini="true">
+			{{page.glob.langa.save}}
+		</button>
 	</form>
 </div>
 {% endblock %}
