--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -91,7 +91,7 @@
 				{% endfor %}
 			</p>
 		</div>
-		{% if ids != NULL%}
+		{% if show_idlinks %}
 		<div id="idlinks" data-role="collapsible" data-collapsed="false">
 			<h2>{{page.glob.langa.idlinks}}</h2>			
 			<p>
