Corrected edit handling for ID templates

--- a/templates/admin_idtemplates.html
+++ b/templates/admin_idtemplates.html
@@ -13,8 +13,8 @@
 {% for template in templates %}
 	<li>
 		<a class="template"  data-template="{{template.name}}">
-			<h2 class="template-name">
-				{{template.name}} 
+			<h2>
+				<span class="template-name">{{template.name}}</span>
 				<span> </span>
 				<span class="template-label">{{template.label}}</span>
 			</h2>
