--- a/templates/installcheck.html
+++ b/templates/installcheck.html
@@ -8,10 +8,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<title>Installation check, BicBucStriim</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="style/jquery/jquery.mobile-1.3.2.min.css">
+  <link rel="stylesheet" href="style/jquery/jquery.mobile-1.4.0-alpha.2.min.css">
   <link rel="stylesheet" href="style/style.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-	<script src="js/libs/modernizr-2.5-respond-1.1.0.min.js"></script>
+	<script src="js/libs/modernizr-2.6.2-custom.min.js"></script>
 </head>
 <body>
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
@@ -408,9 +408,7 @@
     </div>    
   </div> <!-- page -->
 
-  <script src="js/libs/jquery-1.9.1.min.js"></script>
-  <script src="js/libs/jquery.mobile-1.3.2.min.js"></script>
-  <script src="js/libs/jquery.cookie.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/libs/jquery-1.10.2.min.js"></script>
+  <script src="js/libs/jquery.mobile-1.4.0-alpha.2.min.js"></script>
 </body>
 </html>
