Mail documentation changes

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -23,7 +23,7 @@
 	</li>
 		<li>
 		<a href="{{page.rot}}/admin/mail/">
-			<h2>{{page.glob.langa.admin_smtp}}</h2>
+			<h2>{{page.glob.langa.admin_mail}}</h2>
 		</a>
 	</li>
 	<li>
