--- a/templates/admin_mail.html
+++ b/templates/admin_mail.html
@@ -3,7 +3,7 @@
 {% block pid %}id="padmin_mail" data-ajax="false"{%endblock%}
 {% block content %}
 
-<h1>{{ page.glob.langa.admin_smtp }}</h1>
+<h1>{{ page.glob.langa.admin_mail }}</h1>
 {% include "flash_messages.html" %}
 
 <p>{{page.glob.langa.admin_mail_legend}}</p>
