First go at adding author metadata, currently only author images working.

--- a/style/style.less
+++ b/style/style.less
@@ -31,6 +31,20 @@ body {
 
 }
 
+section.author_detail_row {
+  header {
+    min-height: 70px;
+    h3 {
+      a#author_edit {
+        float: right;
+      }
+    }
+  }  
+
+  img#author_thumbnail {
+    margin: 0px 10px 20px 10px;
+  }
+}
 
 table#custom_columns_table {  
   tbody th {
