--- a/templates/main.html
+++ b/templates/main.html
@@ -36,6 +36,7 @@
   <script src="{{page.rot}}/js/libs/jquery-1.10.2.min.js"></script>
   <script src="{{page.rot}}/js/libs/jquery.mobile-1.4.0-alpha.2.min.js"></script>
   <script src="{{page.rot}}/js/libs/jquery.cookie.js"></script>
+  <script src="{{page.rot}}/js/libs/jquery.loadTemplate-1.1.0.min.js"></script>
   <script src="{{page.rot}}/js/script.js"></script>
 </body>
 </html>
